# nosso_old

./: .gitignore  Makefile  README.md  docker-compose.yml
database/: database_post_setup.sql  database_pre_setup.sql
database/postgres/: fly.toml
protobufs/nosso/domains/v1/: domain.proto
protobufs/nosso/users/v1/: service.proto  user.proto
protobufs/nosso/util/v1/: util.proto
services/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.fly  README.md  fly.toml  run_both.sh
services/.cargo/: config.toml
services/main/: Cargo.toml  sqlx-data.json
services/main/src/: auth.rs  error.rs  events.rs  extensions.rs  main.rs  server.rs  session.rs
services/main/src/services/: domains.rs  mod.rs  users.rs
services/main/src/tests/: mod.rs
services/migrations/: 20211107212312_initial.sql  20211107223314_default_app_user.sql
services/protos/: Cargo.toml  build.rs
services/protos/protobufs/nosso/domains/v1/: service.proto
services/protos/protobufs/nosso/events/v1/: events.proto
services/protos/protobufs/nosso/users/v1/: user.proto
services/protos/src/: lib.rs  nosso.domains.v1.rs  nosso.events.v1.rs  nosso.users.v1.rs  nosso.util.v1.rs
services/translations/: Cargo.toml
services/translations/i18n/en/: translations.ftl
services/translations/i18n/pt/: translations.ftl
services/translations/src/: lib.rs
services/workers/: Cargo.toml  sqlx-data.json
services/workers/src/: main.rs
services/workers/src/tasks/: mod.rs
web/: .dockerignore  .prettierrc  Dockerfile  README.md  fly.toml  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tsconfig.json
web/scripts/: generate_protobufs.cjs
web/src/: dash.scss  hooks.ts
web/src/lib/: api.ts  protos.d.ts  protos.js  types.d.ts  utils.ts
web/src/lib/components/dash/: PageInfo.svelte
web/src/lib/datasources/: base.ts  index.ts  make-client.ts
web/src/routes/: __layout.svelte  index.svelte  logout.ts
web/src/routes/api/auth/: authenticate.ts  get-code.ts  get-user-profile.ts  register.ts
web/src/routes/api/domains/: [id].ts  index.ts
web/src/routes/api/users/: index.ts
web/src/routes/internal/dash/: __layout.reset.svelte  authenticate.svelte  index.svelte  login.svelte
web/src/routes/internal/dash/domains/: [id].svelte  __layout.svelte  add.svelte  index.svelte
web/src/routes/internal/dash/users/: index.svelte
